--- a/popup/popup.html
+++ b/popup/popup.html
@@ -28,9 +28,7 @@
     <!-- Video Info Section -->
     <section class="video-info" id="videoInfo">
       <div class="video-metadata">
-        <div class="video-title" id="videoTitle">Not loaded</div>
-        <div class="video-author" id="videoAuthor">Not loaded</div>
-        <div class="video-url" id="videoUrl">Not loaded</div>
+        <div class="video-meta-line" id="videoMetaLine">Not loaded</div>
       </div>
     </section>
 
@@ -68,9 +66,6 @@
     <!-- Action Buttons -->
     <section class="actions-section">
       <button id="generateBtn" class="btn-primary" disabled>
-        <svg class="btn-icon" width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-          <path d="M5,4V7H10.5V19H13.5V7H19V4H5Z"/>
-        </svg>
         Generate Chapters
       </button>
       
