Integrate multiple LLMs via OpenRouter

--- a/options/options.html
+++ b/options/options.html
@@ -11,8 +11,13 @@
   <div class="container">
     <h1>Extension Settings</h1>
     <label for="apiKey">Gemini API Key:</label>
-    <input type="password" id="apiKey" placeholder="Enter your Gemini API key" />
+    <input type="password" id="apiKey" placeholder="Enter your Gemini API key (optional)" />
     <button id="save">Save</button>
+    
+    <label for="openRouterApiKey">OpenRouter API Key:</label>
+    <input type="password" id="openRouterApiKey" placeholder="Enter your OpenRouter API key (optional)" />
+    <button id="saveOpenRouter">Save</button>
+    
     <div id="status"></div>
     <section class="setting-group">
       <h2>About</h2>
