Add model and prompt to results page

--- a/results/results.html
+++ b/results/results.html
@@ -15,7 +15,10 @@
         <svg class="logo" width="24" height="24" viewBox="0 0 24 24" fill="#4A90E2">
           <path d="M3 13h2v-2H3v2zm0 4h2v-2H3v2zm0-8h2V7H3v2zm4 4h14v-2H7v2zm0 4h14v-2H7v2zM7 7v2h14V7H7z"/>
         </svg>
-        <h1 class="title">Chapter Generation Results</h1>
+        <div class="title-section">
+          <div class="title" id="pageTitle">Chapters</div>
+          <div class="user-instructions" id="userInstructions"></div>
+        </div>
       </div>
       <div class="header-actions">
         <button id="backBtn" class="btn-secondary">Back to Video</button>
