--- a/src/results/results.html
+++ b/src/results/results.html
@@ -25,7 +25,7 @@
   <title>__MSG_results_page_title__</title>
   <link rel="stylesheet" href="results.css">
   <script src="../vendor/browser-polyfill.js"></script>
-  <script src="../popup/l10n.js"></script>
+  <script src="../l10n/l10n.js"></script>
 </head>
 <body>
   <div class="container">
