remove time parameter from URLs

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -124,6 +124,7 @@
   <!-- Notification Container -->
   <div class="notification-container" id="notificationContainer"></div>
 
+  <script src="../utils/url-utils.js"></script>
   <script src="instruction-history.js"></script>
   <script src="popup.js"></script>
 </body>
