--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -124,6 +124,16 @@
   <!-- Notification Container -->
   <div class="notification-container" id="notificationContainer"></div>
 
+  <!-- Domain Layer Scripts -->
+  <script src="../domain/values/VideoUrl.js"></script>
+  <script src="../domain/values/ModelId.js"></script>
+  <script src="../domain/values/ApiCredentials.js"></script>
+  <script src="../domain/values/GenerationProgress.js"></script>
+  <script src="../domain/entities/VideoTranscript.js"></script>
+  <script src="../domain/entities/ChapterGeneration.js"></script>
+  <script src="../domain/entities/BrowserTab.js"></script>
+  <script src="../domain/services/TranscriptExtractor.js"></script>
+  
   <script src="../utils/url-utils.js"></script>
   <script src="instruction-history.js"></script>
   <script src="popup.js"></script>
