feat(ui): instruction name in popup header; copy name from history; model picker price info and names; update CHANGELOG for 1.4.1

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -59,9 +59,10 @@
     <!-- Instructions Section -->
     <section class="instructions-section">
       <div class="section-header">
-        <label for="instructionsTextarea">__MSG_custom_instructions_label__</label>
+        <input id="instructionNameInput" class="history-name-input section-title-input" type="text" placeholder="__MSG_custom_instructions_label__" autocomplete="off" spellcheck="false">
         <button id="historyBtn" class="btn-link">__MSG_previous_instructions_button__</button>
       </div>
+
       <div class="textarea-container">
         <div class="placeholder-text" id="instructionsPlaceholder">__MSG_instructions_placeholder__</div>
         <textarea id="instructionsTextarea" class="instructions-textarea" placeholder=""></textarea>
